# claude-tts

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.json  pyproject.toml  pytest.ini  restart_daemon.sh
.claude-plugin/: marketplace.json  plugin.json
commands/: doctor.md  log.md  setup.md  status.md  uninstall.md  voice.md
daemon/: config_io.py  content_router.py  kokoro_worker.py  ollama_integration.py  ollama_summarizer.py  paths.py  schema_validator.py  spoken_log.py  text_utils.py  tts_daemon.py  tts_types.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  PUBLISH.md
hooks/: cursor-after-agent-response.sh  cursor-post-tool-use.sh  cursor-pre-tool-use.sh  cursor_normalize.py  hooks.json  post-tool-use.sh  pre-tool-use.sh  session-start.sh  speech_output_hook.sh
scripts/: build_manifests.py  calibrate.py  demo_audio.py  demo_gif.py  eval_model.py  sweep_tts_logs.sh
tests/: test-install-dry-run.sh  test_announce01_truncation.sh  test_cache_cleanup.py  test_calibration.py  test_config_render.py  test_content_router.py  test_cutover_discipline.py  test_daemon_integration.py  test_disk_guard.py  test_full_pipeline.py  test_generate_ordering.py  test_hook_config.py  test_humanize_paths_pipeline.py  test_ingest_stage_additions.py  test_llm_provider.py  test_ollama_summarizer.py  test_orchestrator_interceptor.py  test_paths.py  test_phase5_observability.py  test_phase5_observability_regressions.py  test_pipeline_modules.py  test_pipeline_trace.py  test_platform.py  test_playback_cutoff.py  test_playback_stage_additions.py  test_playback_stage_legacy_lock.py  test_plugin_manifest.py  test_pre_tool_use_parser.py  test_prose_drop.py  test_queue_manager.py  test_router_corpus.py  test_service_render.py  test_shadow_replay.py  test_single_afplay_spawner.py  test_socket_recv.py  test_spoken_log.py  test_spoken_render.py  test_summarizer_echo.py  test_systemd_render.py  test_text_utils.py  (+3 more)
(+41 files in other folders)
